# OwlListen

./: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
LangListen/: CMakeLists.txt  applicationcontroller.cpp  applicationcontroller.h  audioplaybackcontroller.cpp  audioplaybackcontroller.h  audioringbuffer.cpp  audioringbuffer.h  ffmpegaudioengine.cpp  ffmpegaudioengine.h  main.cpp  qml.qrc  subtitlegenerator.cpp  subtitlegenerator.h  waveformgenerator.cpp  waveformgenerator.h  waveformrenderer.cpp  waveformrenderer.h  waveformview.cpp  waveformview.h  whisperworker.cpp  whisperworker.h
LangListen/qml/: DictationModePanel.qml  EditModePanel.qml  ListeningPracticePage.qml  ListeningPracticePanel.qml  PracticeModePanel.qml  TranscriptionPage.qml  main.qml
docs/: audiobook-architecture.md
scripts/: bundle-mac.sh
src/: App.tsx  main.tsx  styles.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/audioplayer/: Cargo.toml
src-tauri/crates/audioplayer/examples/: play.rs
src-tauri/crates/audioplayer/src/: atempo.rs  buffer.rs  lib.rs  output.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: decoder.rs  mod.rs
src-tauri/src/audiobook/: chapters.rs  mod.rs  playback.rs  progress.rs
src-tauri/src/practice/: mod.rs  playback.rs
src-tauri/src/waveform/: builder.rs  extractor.rs  mod.rs  peak.rs  view.rs
src/components/annotate/: AnnotateScreen.tsx  AnnotateToolbar.tsx  ExportPanel.tsx  LabelList.tsx  PracticePlayerBar.tsx  ShortcutModal.tsx  TimeAxis.tsx  WaveformCanvas.tsx
src/components/audiobook/: AudiobookScreen.scss  AudiobookScreen.tsx  ChapterList.scss  ChapterList.tsx  EmptyState.scss  EmptyState.tsx  LoadingModal.scss  LoadingModal.tsx  NowPlaying.scss  NowPlaying.tsx  PlayerBar.scss  PlayerBar.tsx  ShortcutModal.scss  ShortcutModal.tsx  icons.tsx
src/components/home/: HomeScreen.tsx
src/components/listen/: DiffView.scss  DiffView.tsx  ListenScreen.scss  ListenScreen.tsx  PracticePanel.scss  PracticePanel.tsx  SegmentSidebar.scss  SegmentSidebar.tsx
src/components/shared/: Primitives.tsx
src/components/waveform/: ExportPanel.tsx  LabelList.tsx  PlayerBar.tsx  Toolbar.tsx  WaveformCanvas.tsx  WaveformEditor.tsx
src/hooks/: useAudioPlayer.ts  useAudiobook.ts  useDiff.ts  useLabels.ts  usePack.ts  usePracticePlayer.ts  useSpeechInput.ts  useWaveform.ts  useWebGL.ts
src/styles/: _mixins.scss  _reset.scss  _tokens.scss  index.scss
src/styles/components/: _button.scss  _kbd.scss  _modal.scss
src/types/: waveform.ts
src/utils/: audiobookApi.ts  practiceApi.ts  tauriApi.ts
