[package]
name = "langlisten-waveform"
version = "0.1.0"
edition = "2021"

[lib]
name = "langlisten_waveform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "langlisten-waveform"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 并发
rayon = "1.10"
# 错误处理
thiserror = "1"
anyhow = "1"
# 日志
log = "0.4"
ffmpeg-next = "8.1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
